add redirect from '/' to 'profile'

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                   <a class="nav-link" href="{{ url_for('login')}}">Войти</a>
               </li>
               <li class="nav-item active">
-                  <a class="nav-link" href="{{ url_for('profile')}}">Профиль</a>
+                  <a class="nav-link" href="{{ url_for('profile')}}">БАЗА</a>
               </li>
               <li class="nav-item active">
                   <a class="nav-link" href="{{ url_for('info')}}">Инфо</a>
