login for userlogin

--- a/templates/login.html
+++ b/templates/login.html
@@ -28,8 +28,8 @@
                 <div class="form-group">
                     <form method="POST" action="/login">
                         <div class="form-field">
-                            <label for="username">Логин:</label>
-                            <input type="text" class="form-control" name="username" id="username" required>
+                            <label for="userlogin">Логин:</label>
+                            <input type="text" class="form-control" name="userlogin" id="userlogin" required>
                         </div>
                         <div class="form-field">
                             <label for="password">Пароль:</label>
