--- a/templates/profiles/it_admin_profile.html
+++ b/templates/profiles/it_admin_profile.html
@@ -4,7 +4,7 @@
 {% block additional_styles %}<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">{% endblock %}
 {% block content %}
     <div class="profile-wrapper">
-            <p id="welcome">Добро пожаловать, {{ username }}.</p>
+            <p id="welcome">Добро пожаловать, {{ username }}.!!!!!</p>
             <hr>
             <h2>Создание пароля</h1>
                 <div class="container add-user-form">
