Скрыл отдел в таблице

--- a/templates/profiles/it_admin_profile.html
+++ b/templates/profiles/it_admin_profile.html
@@ -87,7 +87,7 @@
                                     <th>Ресурс</th>
                                     <th>Пароль</th>
                                     <th>Роль</th>
-                                    <th>Отдел</th>
+                                    <!-- <th>Отдел</th> -->
                                     <th>Время создания</th>
                                     <th>Кто создал</th>
                                 </tr>
@@ -109,7 +109,7 @@
                                             </div>
                                         </td>
                                         <td data-filter="userrole">{{ account.userrole }}</td>
-                                        <td data-filter="userdepart">{{ account.userdepart }}</td>
+                                        <!-- <td data-filter="userdepart">{{ account.userdepart }}</td> -->
                                         <td>{{ account.created }}</td>
                                         <td>{{ account.whocreate }}</td>
                                     </tr>
